--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   background: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/img/evening/21.webp") center/cover, rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
   transition: background-image 1s ease-in-out;
-  overflow: hidden;
 }
 
 .header {
@@ -753,7 +752,7 @@ body {
   opacity: 0;
   position: absolute;
   bottom: 40px;
-  right: -305px;
+  right: 20px;
   width: 290px;
   min-height: 150px;
   max-height: 300px;
@@ -763,12 +762,12 @@ body {
   border-radius: 5px;
   transition: all .7s ease-out;
   box-shadow: 0 0 10px 1px rgb(255 255 255 / 80%);
-  z-index: 4;
+  z-index: -1;
 }
 
 .todoContainer.todoopen {
-  opacity: 100%;
-  transform: translateX(-315px);
+  opacity: 1;
+  z-index: 4;
 }
 
 .completedToDo {
