--- a/css/style.css
+++ b/css/style.css
@@ -1068,7 +1068,7 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
 
   .header {
     padding: 20px 10px;
@@ -1143,6 +1143,10 @@ body {
     font-size: 32px;
   }
 
+  .name::placeholder {
+    font-size: 32px;
+  }
+
   .quote {
     margin: 0 auto 10px;
     font-size: 16px;
@@ -1210,7 +1214,7 @@ body {
 
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .play__list__item {
     font-size: 12px;
   }
@@ -1252,6 +1256,10 @@ body {
   }
 
   .name {
+    font-size: 22px;
+  }
+
+  .name::placeholder {
     font-size: 22px;
   }
 }
